--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "license": "ISC",
   "dependencies": {
+    "animate.css": "^3.5.2",
     "body-parser": "^1.17.2",
     "bulma": "^0.4.4",
     "font-awesome": "^4.7.0",
@@ -19,7 +20,8 @@
     "react-dom": "^15.1.0",
     "react-router-dom": "^4.1.2",
     "react-router-redux": "^5.0.0-alpha.6",
-    "react-transform-hmr": "^1.0.4"
+    "react-transform-hmr": "^1.0.4",
+    "scrollreveal": "^3.3.6"
   },
   "devDependencies": {
     "babel-core": "^6.10.4",
